@@ -38,6 +38,32 @@ $ ./bin/seata-server.sh -h 127.0.0.1 -p 8091 -m db
 $ bin\seata-server.bat -h 127.0.0.1 -p 8091 -m db
 ```
 
+> 再运行 rocketmq 消息队列服务。[点击跳转官方文档](https://rocketmq.apache.org/docs/quick-start)
+
+- *rocketmq分name服务和broker服务*
+
+
+- Linux
+```shell
+# Start Name Server 启动名称服务器
+$ nohup sh bin/mqnamesrv &
+# Start Broker 启动代理
+$ nohup sh bin/mqbroker -n localhost:9876 &
+```
+- Windows
+ 
+- 先设置环境变量：`ROCKETMQ_HOME="D:\rocketmq"`
+```shell
+# Start Name Server 启动名称服务器
+$ .\bin\mqnamesrv.cmd
+# Start Broker 启动代理
+$ .\bin\mqbroker.cmd -n localhost:9876
+```
+
+> 如果windows启动代理报错：`错误: 找不到或无法加载主类 Files\Java\jdk1.8.0_301\lib\dt.jar;C:\Program，这个报错原因是因为java环境安装路径包含了空格`
+
+*解决方案：[点击查看](https://blog.csdn.net/s724542558/article/details/119996755) runbroker.cmd 内容在文章底部有*
+
 # 下载-打包
 
 ```shell
@@ -100,6 +126,8 @@ nohup java -jar -Dspring.profiles.active=prod user/target/user-0.0.1-SNAPSHOT.ja
 
 > Maven 3.6.1
 
+> RocketMQ 4.9.3
+
 > Nacos 2.0.3  操作文档：https://nacos.io/zh-cn/docs/quick-start.html
 
 > Redis 3
@@ -116,3 +144,51 @@ nohup java -jar -Dspring.profiles.active=prod user/target/user-0.0.1-SNAPSHOT.ja
 
 > `Generate MyPOJOs.groovy` 生成数据库Model
 
+# RocketMQ 的 runbroker.cmd
+
+```shell
+@echo off
+rem Licensed to the Apache Software Foundation (ASF) under one or more
+rem contributor license agreements.  See the NOTICE file distributed with
+rem this work for additional information regarding copyright ownership.
+rem The ASF licenses this file to You under the Apache License, Version 2.0
+rem (the "License"); you may not use this file except in compliance with
+rem the License.  You may obtain a copy of the License at
+rem
+rem     http://www.apache.org/licenses/LICENSE-2.0
+rem
+rem Unless required by applicable law or agreed to in writing, software
+rem distributed under the License is distributed on an "AS IS" BASIS,
+rem WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+rem See the License for the specific language governing permissions and
+rem limitations under the License.
+
+set JAVAHOME="%JAVA_HOME%"
+if not exist "%JAVA_HOME%\bin\java.exe" echo Please set the JAVA_HOME variable in your environment, We need java(x64)! & EXIT /B 1
+set "JAVA=%JAVA_HOME%\bin\java.exe"
+
+setlocal
+
+set BASE_DIR=%~dp0
+set BASE_DIR=%BASE_DIR:~0,-1%
+for %%d in (%BASE_DIR%) do set BASE_DIR=%%~dpd
+
+set CLASSPATHSTR="%CLASSPATH%"
+set CLASSPATH=.;%BASE_DIR%conf;%BASE_DIR%lib\*;%CLASSPATHSTR%
+
+rem ===========================================================================================
+rem  JVM Configuration
+rem ===========================================================================================
+set "JAVA_OPT=%JAVA_OPT% -server -Xms2g -Xmx2g"
+set "JAVA_OPT=%JAVA_OPT% -XX:+UseG1GC -XX:G1HeapRegionSize=16m -XX:G1ReservePercent=25 -XX:InitiatingHeapOccupancyPercent=30 -XX:SoftRefLRUPolicyMSPerMB=0 -XX:SurvivorRatio=8"
+set "JAVA_OPT=%JAVA_OPT% -verbose:gc -Xloggc:%USERPROFILE%\mq_gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintAdaptiveSizePolicy"
+set "JAVA_OPT=%JAVA_OPT% -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=30m"
+set "JAVA_OPT=%JAVA_OPT% -XX:-OmitStackTraceInFastThrow"
+set "JAVA_OPT=%JAVA_OPT% -XX:+AlwaysPreTouch"
+set "JAVA_OPT=%JAVA_OPT% -XX:MaxDirectMemorySize=15g"
+set "JAVA_OPT=%JAVA_OPT% -XX:-UseLargePages -XX:-UseBiasedLocking"
+set "JAVA_OPT=%JAVA_OPT% -Djava.ext.dirs=%BASE_DIR%lib;%JAVAHOME%\jre\lib\ext"
+set "JAVA_OPT=%JAVA_OPT% -cp %CLASSPATH%"
+
+"%JAVA%" %JAVA_OPT% %*
+```
